<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rolls" />

            <RelativeLayout
                android:layout_width="@dimen/ninty_dp"
                android:layout_height="@dimen/sixty_dp"
                android:layout_alignParentRight="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/tag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingRight="@dimen/twenty_dp"
                    android:text="@string/five_off"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/five_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/mehta_tag_line"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/detail_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sixteen_sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/five_dp">

                <TextView
                    android:id="@+id/tv_contact_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/contact_info"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_location_id"
                    android:layout_width="@dimen/twenty_five_dp"
                    android:layout_height="@dimen/twenty_five_dp"
                    android:layout_below="@+id/tv_contact_detail"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_contact_detail"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_toRightOf="@+id/iv_location_id"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sixteen_sp" />

                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="@dimen/twenty_five_dp"
                    android:layout_height="@dimen/twenty_five_dp"
                    android:layout_below="@+id/iv_location_id"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:src="@drawable/phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_location_id"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_toRightOf="@+id/iv_phone"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/phone_no"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_mail"
                    android:layout_width="@dimen/twenty_five_dp"
                    android:layout_height="@dimen/twenty_five_dp"
                    android:layout_below="@+id/iv_phone"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:src="@drawable/mail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_phone"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_toRightOf="@+id/iv_mail"
                    android:autoLink="web"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/email"
                    android:textColor="@color/email_text_color"
                    android:textSize="@dimen/sixteen_sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>